<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    
    <LinearLayout android:id="@+id/root_paired_devices" 
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:orientation="vertical"
    	android:layout_weight="1"
    	android:visibility="gone">
    	
        <TextView android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/title_paired_devices"
        	android:padding="5dp"/>
    	
        <View style="@style/Seperator"/>
    
       	<ListView android:id="@+id/lv_paired_devices"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>  
    </LinearLayout>
    
        
    <LinearLayout android:id="@+id/root_new_devices" 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_weight="2">
    	
        <TextView android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/title_new_devices"
        	android:padding="5dp"/>
    	
        <View style="@style/Seperator"/>
    
       	<ListView android:id="@+id/lv_new_devices"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"/>  
    </LinearLayout>
    
    
	<Button style="@android:attr/buttonBarButtonStyle" 
        android:id="@+id/btn_discover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_discover"/>

</LinearLayout>